compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_identity.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    type t : boolean\n\n    % Type operand prevents checking of type compatibility\n    var _t := + t\n    "
---
"t"@(FileId(1), 10..11) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of boolean
"_t"@(FileId(1), 90..92) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 98..99: cannot use `t` as an expression
| error in file FileId(1) for 98..99: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
