compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_not_equal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t not= t\n    var _tk := t not= k\n    var _kt := k not= t\n    "

---
"t"@(FileId(1), 10..11) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [Declared]: int
"_tt"@(FileId(1), 102..105) [Declared]: boolean
"_tk"@(FileId(1), 126..129) [Declared]: boolean
"_kt"@(FileId(1), 150..153) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 109..110: cannot use `t` as an expression
| error in file FileId(1) for 109..110: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 116..117: cannot use `t` as an expression
| error in file FileId(1) for 116..117: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 133..134: cannot use `t` as an expression
| error in file FileId(1) for 133..134: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
error in file FileId(1) at 164..165: cannot use `t` as an expression
| error in file FileId(1) for 164..165: `t` is a reference to a type, not a variable
| note in file FileId(1) for 10..11: `t` declared here
